--- a/Stocky.Client/Components/DialogWindows/UserDialogs/DeleteUserDialog.razor
+++ b/Stocky.Client/Components/DialogWindows/UserDialogs/DeleteUserDialog.razor
@@ -14,7 +14,7 @@
 </MudDialog>
 
 @code {
-    [CascadingParameter] MudDialogInstance MudDialog { get; set; } = default!;
+    [CascadingParameter] MudDialogInstance MudDialog { get; set; } = null!;
 
     [Parameter] public int UserId { get; set; }
     [Parameter] public string ContentText { get; set; } = "Are you sure?";
