--- a/Stocky.Client/Components/Pages/Login.razor
+++ b/Stocky.Client/Components/Pages/Login.razor
@@ -4,6 +4,7 @@
 @using ReferenceClass.Models
 @inject HttpClient Http
 @inject NavigationManager Navigation
+@inject AuthService AuthService
 @layout NoNavbar
 
 <div class="d-flex justify-center align-center" style="height: 70vh;">
@@ -60,7 +61,7 @@
                 Token = resultText
             };
 
-            if (!string.IsNullOrWhiteSpace(loginResponse?.Token))
+            if (!string.IsNullOrWhiteSpace(loginResponse.Token))
             {
                 AuthService.SetToken(loginResponse.Token);
 
