user issues fixed added saving token in pc and some other issues also fixed

--- a/Stocky.Client/Components/DialogWindows/ProductDialogs/EditProductDialog.razor
+++ b/Stocky.Client/Components/DialogWindows/ProductDialogs/EditProductDialog.razor
@@ -1,6 +1,6 @@
-@using ReferenceClass.Models
+@using Stocky.Shared.Models
+@using Stocky.Shared.Models.Enums
 @inject HttpClient Http
-    @using ReferenceClass.Models.Enums
 
 @code {
     [CascadingParameter] MudDialogInstance MudDialog { get; set; } = default!;
