--- a/Stocky.Client/Components/Pages/AddingProduct.razor
+++ b/Stocky.Client/Components/Pages/AddingProduct.razor
@@ -1,8 +1,7 @@
 @page "/adding-product"
+@using Stocky.Shared.Models
 @inject HttpClient Http
 @inject IJSRuntime Js
-
-@using ReferenceClass.Models
 
 <PageTitle>Barcode Scanner</PageTitle>
 
