--- a/Stocky.Client/Components/Pages/Products.razor
+++ b/Stocky.Client/Components/Pages/Products.razor
@@ -3,7 +3,7 @@
 @inject IDialogService DialogService
 @using Microsoft.AspNetCore.Authorization
 @using MudBlazor.Components.DialogWindows.ProductDialogs
-@using ReferenceClass.Models
+@using Stocky.Shared.Models
 @attribute [Authorize]
 
 <PageTitle>Products</PageTitle>
