--- a/Stocky.Client/Components/DialogWindows/UserDialogs/OrderItems.razor
+++ b/Stocky.Client/Components/DialogWindows/UserDialogs/OrderItems.razor
@@ -1,6 +1,6 @@
 @using System.Net.Http.Headers
 @using MudBlazor.Components.Service
-@using ReferenceClass.Models
+@using Stocky.Shared.Models
 @inject HttpClient Http
 @inject AuthService AuthService
 
