--- a/Stocky.Client/Components/DialogWindows/UserDialogs/PocketItems.razor
+++ b/Stocky.Client/Components/DialogWindows/UserDialogs/PocketItems.razor
@@ -1,7 +1,7 @@
 @using System.Net.Http.Headers
 @using System.Text.Json
 @using MudBlazor.Components.Service
-@using ReferenceClass.Models
+@using Stocky.Shared.Models
 @inject HttpClient Http
 @inject AuthService AuthService
 
