--- a/Stocky.Client/Components/DialogWindows/UserDialogs/CreateUserDialog.razor
+++ b/Stocky.Client/Components/DialogWindows/UserDialogs/CreateUserDialog.razor
@@ -14,7 +14,7 @@
     </DialogActions>
 </MudDialog>
 @code {
-    [CascadingParameter] MudDialogInstance MudDialog { get; set; } = default!;
+    [CascadingParameter] MudDialogInstance MudDialog { get; set; } = null!;
     [Parameter] public User UserModel { get; set; } = new();
 
     private async Task Submit()
