--- a/Stocky.Client/Components/Layout/NavMenu.razor
+++ b/Stocky.Client/Components/Layout/NavMenu.razor
@@ -19,6 +19,10 @@
     <MudNavLink Href="products" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">
         Products Page
     </MudNavLink>
+    
+    <MudNavLink Href="create-pocket" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Add">
+        Adding Pocket
+    </MudNavLink>
 
     <MudSpacer />
 
