--- a/Stocky.Client/Components/Pages/CreatingPocket.razor
+++ b/Stocky.Client/Components/Pages/CreatingPocket.razor
@@ -6,20 +6,20 @@
 @inject AuthService AuthService
 
 <MudPaper Class="pa-6" Style="max-width:600px">
-    <MudText Typo="Typo.h5">Create New Pocket</MudText>
+    <MudText Typo="Typo.h5">Create New CreatingPocket</MudText>
 
     <MudTextField @bind-Value="PocketModel.TotalAmount" Label="Total Amount"/>
     <MudTextField @bind-Value="PocketModel.TotalWeight" Label="Total Weight"/>
     <MudTextField @bind-Value="PocketModel.UserId" Label="UserId"/>
 
     <MudButton Color="Color.Primary" OnClick="CreatePocket">
-        Create Pocket
+        Create CreatingPocket
     </MudButton>
 
     @if (PocketCreated)
     {
         <MudDivider Class="my-4"/>
-        <MudText Typo="Typo.h6">Pocket Barcode: @PocketModel.BarCode</MudText>
+        <MudText Typo="Typo.h6">CreatingPocket Barcode: @PocketModel.BarCode</MudText>
 
         <MudTextField @bind-Value="ProductBarCode" Label="Scan Product Barcode" Immediate="true"/>
         <MudButton OnClick="AddProductToPocket">Add Product</MudButton>
@@ -51,7 +51,7 @@
 
     private async Task CreatePocket()
     {
-        var request = new HttpRequestMessage(HttpMethod.Post, "http://localhost:5191/Pocket/CreatePocket");
+        var request = new HttpRequestMessage(HttpMethod.Post, "http://localhost:5191/CreatingPocket/CreatePocket");
 
         request.Content = JsonContent.Create(PocketModel);
         request.Headers.Authorization = new AuthenticationHeaderValue("Bearer", AuthService.Token);
@@ -90,7 +90,7 @@
 
     private async Task FinishPocket()
     {
-        var request = new HttpRequestMessage(HttpMethod.Put, "http://localhost:5191/Pocket/UpdatePocket");
+        var request = new HttpRequestMessage(HttpMethod.Put, "http://localhost:5191/CreatingPocket/UpdatePocket");
 
         request.Content = JsonContent.Create(PocketModel);
         request.Headers.Authorization = new AuthenticationHeaderValue("Bearer", AuthService.Token);
